plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.16'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

ext {
    // Spring Boot 3.5.x 기본값은 Flyway 11.7.2 이며 MySQL 8.1 까지만 지원한다.
    // 운영 DB(MySQL 8.4)에서 "Flyway upgrade recommended" 경고가 뜨므로 버전을 올린다(9.4 까지 지원).
    //
    // 11.x 계열의 마지막 버전으로 고정한다. Flyway 12.0.0 에서 FluentConfiguration.cleanOnValidationError()
    // 가 제거되었는데 Boot 3.5.x 의 FlywayAutoConfiguration 이 이를 호출하므로,
    // 12/13 으로 올리면 NoSuchMethodError 로 부팅이 실패한다. Boot 를 올릴 때 함께 올릴 것.
    set('flyway.version', '11.20.3')
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework:spring-messaging'
    implementation 'org.apache.httpcomponents.client5:httpclient5'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // S3 (AWS SDK v2). SDK v1(com.amazonaws)은 2025-12 지원 종료되었고,
    // 이를 끌어오던 spring-cloud-starter-aws 는 Boot 2.2 시절 아티팩트라 함께 제거했다.
    implementation platform('software.amazon.awssdk:bom:2.39.6')
    implementation 'software.amazon.awssdk:s3'

    // DB 마이그레이션 (flyway-mysql은 Flyway 10+에서 MySQL 지원에 별도로 필요)
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

    // FCM
    implementation 'com.google.firebase:firebase-admin:9.2.0'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
